# rnnDesign

./: LICENSE  README.md  inputDashboard.ipynb  pyproject.toml  setup.cfg  test.ipynb
src/rnnDesign/: randomMotionStimulus.py
